# dependence-analysis-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml
.hc/reports/: site-backend-analysis-v2.md  site-backend-analysis-v3.md  site-backend-analysis-v4.md  site-backend-analysis-v5-diff.md  site-backend-analysis-v5.md  site-backend-analysis-v6-diff.md  site-backend-analysis-v6.md  site-backend-analysis.md
src/dependence_analysis_mcp/: cli.py  ignore.py  models.py  parsing.py  path_search.py  report.py  resolve.py  scanner.py  server.py  ts_ast.py
tests/: test_unused_import_detection.py  test_vite_alias_parsing.py
vscode-extension/: 1.24.0  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/scripts/: _mcp_entry.py
vscode-extension/src/: extension.ts
