[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "dependence-analysis-mcp"
version = "0.1.0"
description = "MCP server for scanning JS/TS import dependencies and finding unused files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dependence-analysis-mcp" }]
keywords = ["mcp", "fastapi", "dependency", "typescript", "react", "vue", "angular"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "uvicorn>=0.27",
  "mcp>=1.24.0",
  "pathspec>=0.12.1",
  "tree-sitter>=0.22.0",
  "tree-sitter-typescript>=0.23.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.urls]
Homepage = "https://fastapi.tiangolo.com/"

[project.scripts]
dependence-analysis-mcp = "dependence_analysis_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dependence_analysis_mcp"]
